--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							$("#message").html('<p class="success">Item Added</p><p>Redirecting....</p>');
 						});
 					else
-						$("#message").html('<p class="error">ERROR: Invalid username and/or password.</p>');
+						$("#message").html('<p class="error"></p>');
 				}	
 			});
 			return false;
@@ -44,12 +44,12 @@
 			
 			<div>
 				<label for="Product_Url">Product_Url:</label>
-				<input type="text" name="username" id="username" placeholder="Product_Url"/>
+				<input type="Product_Url" name="Product_Url" id="username" placeholder="Product_Url"/>
 			</div>
 			
 			<div>
 				<label for="Product_price">Product_price</label>
-				<input type="password" name="password" id="password" placeholder="Product_price" />
+				<input type="Product_price" name="Product_price" id="password" placeholder="Product_price" />
 			</div>
 			
 			<div>				
