--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 			
 			<div>				
 				<button type="submit" id="login">Submit</button>
+				{
+				exec("sudo python /var/www/notify.py");
+				}
 			</div>
 			
 		</form>
