--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
 			</div>
 			
 			<div>				
-				<button type="submit" id="login">Submit</button>
-				{
-				exec("sudo python /var/www/notify.py");
-				}
+				<button type="submit" id="login" 
+				exec("sudo python /var/www/notify.py");>Submit</button>
+
 			</div>
 			
 		</form>
