--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 			</div>
 			
 			<div>				
-				<button type="submit" id="login" 
-				exec("sudo python /var/www/notify.py");>Submit</button>
+				<button type="submit" id="login";>Submit</button>
 
 			</div>
 			
