--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			</div>
 			
 			<div>				
-				<button type="submit" id="login";>Submit</button>
+				<button type="submit" id="login" action="notify.py">Submit</button>
 
 			</div>
 			
